# rlmresearch

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  rebuild.sh
.planning/: PROJECT.md  ROADMAP.md
.planning/phases/01-rlm-core-api/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-REVIEWS.md
.planning/phases/02-multi-model-tools/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md
.planning/research/: api-integration.md  rlm-integration.md
src/rlm_assistant/: __init__.py  config.py  rlm_client.py  server.py  system_prompt.py  tools.py
tests/: test_tools.py
